# async-relay

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.example.yaml
src/: __init__.py  __main__.py  backend_pool.py  cli.py  config.py  config_watcher.py  dns_resolver.py  event_hook.py  main.py  relay_service.py  runtime_config.py  service_manager.py  web_ui.py
src/app/: service_manager.py
src/config/: __init__.py  loader.py  models.py  runtime.py  watcher.py
src/core/: __init__.py  backend_pool.py  dns_resolver.py  relay_service.py
src/static/: index.html
src/web/: __init__.py  web_ui.py
static/: index.html
